create jobs.html and upt jc
2 + 1 backup file

--- a/Hiring_Team/jobcreation.html
+++ b/Hiring_Team/jobcreation.html
@@ -167,6 +167,14 @@
                 name="jc-job-desc"
                 rows="3"
               ></textarea>
+              <label for="jc-deadline">Deadline for regsitration:</label>
+              <input
+                type="date"
+                id="jc-deadline"
+                class="job-field-padding"
+                name="jc-deadline"
+              />
+              <br />
               <label for="jc-documents" class="job-field"
                 >Attach Documents</label
               ><br />
