--- a/Student/jobs.html
+++ b/Student/jobs.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Student-Jobs</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link href="style.css" rel="stylesheet" />
+    <link href="/resources/style.css" rel="stylesheet" />
+
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
@@ -65,9 +66,182 @@
         </div>
       </div>
     </nav>
-    <h1>Job page works</h1>
-    <h1>Job page works</h1>
-    <h1>Job page works</h1>
+
+    <section class="" style="margin-top: 74px">
+      <div class="container-fluid px-0">
+        <div class="row g-0">
+          <div class="col-lg-6 vh-100 bg-danger">
+            <div class="vh-100 bg-success">
+              <h2>List of Companies</h2>
+              <hr />
+              <div class="container my-5">
+                <div class="shadow-4 rounded-5 overflow-hidden">
+                  <table class="table align-middle mb-0 bg-white">
+                    <thead class="bg-light">
+                      <tr>
+                        <th>Company Name</th>
+                        <th>Job Title</th>
+                        <th>Status</th>
+                        <th>Deadline</th>
+                        <th>Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div class="ms-3">
+                              <p class="fw-bold mb-1">Prodapt</p>
+                              <p class="text-muted mb-0">prodapt.com</p>
+                            </div>
+                          </div>
+                        </td>
+                        <td>
+                          <p class="fw-bold mb-1">Software engineer</p>
+                          <p class="text-muted mb-0">IT department</p>
+                        </td>
+                        <td>
+                          <span class="badge bg-warning text-dark rounded-pill"
+                            >Last day</span
+                          >
+                        </td>
+                        <td>Some date</td>
+                        <td>
+                          <button
+                            type="button"
+                            class="btn btn-link btn-sm btn-rounded"
+                          >
+                            Apply
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div class="ms-3">
+                              <p class="fw-bold mb-1">Indium</p>
+                              <p class="text-muted mb-0">
+                                indiumtechnologies.com
+                              </p>
+                            </div>
+                          </div>
+                        </td>
+                        <td>
+                          <p class="fw-normal mb-1">Consultant</p>
+                          <p class="text-muted mb-0">Finance</p>
+                        </td>
+                        <td>
+                          <span class="badge bg-success""
+                            >Active</span
+                          >
+                        </td>
+                        <td>Some date</td>
+                        <td>
+                          <button
+                            type="button"
+                            class="btn btn-link btn-rounded btn-sm fw-bold"
+                            data-mdb-ripple-color="dark"
+                          >
+                            Apply
+                          </button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div class="ms-3">
+                              <p class="fw-bold mb-1">Kaar Tech</p>
+                              <p class="text-muted mb-0">
+                                kaartechnologies.com
+                              </p>
+                            </div>
+                          </div>
+                        </td>
+                        <td>
+                          <p class="fw-normal mb-1">Designer</p>
+                          <p class="text-muted mb-0">UI/UX</p>
+                        </td>
+                        <td>
+                          <span class="badge bg-danger rounded-pill"
+                            >Awaiting</span
+                          >
+                        </td>
+                        <td>Some date</td>
+                        <td>
+                          <button
+                            type="button"
+                            class="btn btn-link btn-rounded btn-sm fw-bold"
+                            data-mdb-ripple-color="dark"
+                          >
+                            Apply
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 vh-100 bg-primary">
+            <div class="vh-100 bg-warning">
+              <h2>About</h2>
+              <hr />
+              <button type="button" class="submit-button" style="margin-right: 15px;">Apply</button>
+              <table class="table table-borderless">
+                <tbody>
+                  {% for count in stu_detail %}
+                  <tr>
+                    <th scope="row">Company Name</th>
+                    <td>{{ count.fname }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Job Title</th>
+                    <td>{{ count.rollno }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">CTC</th>
+                    <td>{{ count.email }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Company Web link</th>
+                    <td>{{ count.dob }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Drive Start Date</th>
+                    <td>{{ count.gender }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Drive End Date</th>
+                    <td>{{ count.clg_name }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Required Skills</th>
+                    <td>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Fugit, magni!
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Job Description</th>
+                    <td>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Quisquam consectetur labore neque, rerum rem quidem cumque
+                      necessitatibus facilis at quasi nesciunt ab iste expedita
+                      eligendi deserunt quis dolore minus explicabo!
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Deadline to register </th>
+                    <td>{{ count.branch }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
