--- a/Student/jobs.html
+++ b/Student/jobs.html
@@ -184,10 +184,11 @@
             </div>
           </div>
           <div class="col-lg-6 vh-100 bg-primary">
-            <div class="vh-100 bg-warning">
-              <h2>About</h2>
+            <div class="vh-100 bg-warning" style="padding:25px">
+              <h2 id="job-h2-comp-name">Replace Company Name Here..</h2>
               <hr />
               <button type="button" class="submit-button" style="margin-right: 15px;">Apply</button>
+              <!--
               <table class="table table-borderless">
                 <tbody>
                   {% for count in stu_detail %}
@@ -237,6 +238,27 @@
                   </tr>
                 </tbody>
               </table>
+              -->
+              <!--New company details display without table-->
+              <label for="job-p-comp-name" class="job-head">Company Name</label>
+              <p class="job-content" id="job-p-comp-name">Something</p>
+              <label for="job-p-job-title" class="job-head">Job Title</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">CTC</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">Company web link</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">Drive Start Date</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">Drive End Date</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">Required Skills</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">Job Description</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-job-title" class="job-head">Deadline to Register</label>
+              <p class="job-content" id="job-p-job-title">Something more</p>
+              <!--New company details display without table-->
             </div>
           </div>
         </div>
