added comments for jobs.html
addded comments

--- a/Student/jobs.html
+++ b/Student/jobs.html
@@ -272,3 +272,10 @@
     ></script>
   </body>
 </html>
+
+<!--Comments
+  line 187 style padding added.
+  h2 at line 188 has been changed and 
+  242 to 261 new content
+dont forget to add 2 new classes sent in discord to style.css
+ethachum venum naa call me -->
