edited jc, jobs, jobs 2 and 3
details in respective comments

--- a/Student/jobs.html
+++ b/Student/jobs.html
@@ -244,20 +244,55 @@
               <p class="job-content" id="job-p-comp-name">Something</p>
               <label for="job-p-job-title" class="job-head">Job Title</label>
               <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-package" class="job-head">Package</label>
+              <p class="job-content" id="job-p-package">Something more</p>
               <label for="job-p-job-title" class="job-head">CTC</label>
               <p class="job-content" id="job-p-job-title">Something more</p>
-              <label for="job-p-job-title" class="job-head">Company web link</label>
-              <p class="job-content" id="job-p-job-title">Something more</p>
-              <label for="job-p-job-title" class="job-head">Drive Start Date</label>
-              <p class="job-content" id="job-p-job-title">Something more</p>
-              <label for="job-p-job-title" class="job-head">Drive End Date</label>
-              <p class="job-content" id="job-p-job-title">Something more</p>
-              <label for="job-p-job-title" class="job-head">Required Skills</label>
-              <p class="job-content" id="job-p-job-title">Something more</p>
-              <label for="job-p-job-title" class="job-head">Job Description</label>
-              <p class="job-content" id="job-p-job-title">Something more</p>
-              <label for="job-p-job-title" class="job-head">Deadline to Register</label>
-              <p class="job-content" id="job-p-job-title">Something more</p>
+              <label for="job-p-comp-link" class="job-head"
+                >Company web link</label
+              >
+              <p class="job-content" id="job-p-comp-link">Something more</p>
+              <label for="job-p-add-info" class="job-head"
+                >Additional Information</label
+              >
+              <p class="job-content" id="job-p-add-info">Something more</p>
+              <label for="job-p-drive-start" class="job-head"
+                >Drive Start Date</label
+              >
+              <p class="job-content" id="job-p-drive-start">Something more</p>
+              <label for="job-p-drive-end" class="job-head"
+                >Drive End Date</label
+              >
+              <p class="job-content" id="job-p-drive-end">Something more</p>
+              <label for="job-p-reqd-skills" class="job-head"
+                >Required Skills</label
+              >
+              <p class="job-content" id="job-p-reqd-skills">Something more</p>
+
+              <label for="job-p-job-desc" class="job-head"
+                >Job Description</label
+              >
+              <p class="job-content" id="job-p-job-desc">Something more</p>
+
+              <label for="job-p-deadline" class="job-head"
+                >Deadline to Register</label
+              >
+              <p class="job-content" id="job-p-deadline">Something more</p>
+              <label for="job-p-his-arr" class="job-head"
+                >History of arrears</label
+              >
+              <p class="job-content" id="job-p-his-arr">Something more</p>
+              <label for="job-p-10" class="job-head">Class 10</label>
+              <p class="job-content" id="job-p-10">Something more</p>
+              <label for="job-p-12" class="job-head">Class 12</label>
+              <p class="job-content" id="job-p-12">Something more</p>
+              <label for="job-p-ug" class="job-head">UG CGPA</label>
+              <p class="job-content" id="job-p-ug">Something more</p>
+
+              <label for="job-p-eligible-dept" class="job-head"
+                >Eligible Departments</label
+              >
+              <p class="job-content" id="job-p-eligible-dept">Something</p>
               <!--New company details display without table-->
             </div>
           </div>
@@ -278,4 +313,7 @@
   h2 at line 188 has been changed and 
   242 to 261 new content
 dont forget to add 2 new classes sent in discord to style.css
-ethachum venum naa call me -->
+ethachum venum naa call me 
+
+4.3.2023
+all ids were wrong ..so edited and pasted from jobs2.html-->
