--- a/Hiring_Team/jobcreation.html
+++ b/Hiring_Team/jobcreation.html
@@ -80,7 +80,7 @@
           <div class="col-lg-6">
             <form action="">
               <input type="submit" class="submit-button" /><br />
-
+              <legend>Basic Drive details</legend>
               <label for="jc-comp-name">Company Name</label>
               <input
                 type="text"
@@ -115,6 +115,15 @@
                 placeholder="Enter max range"
                 name="jc-max-ctc"
               />
+              <label for="jc-add-info" class="job-field"
+                >Additional Information</label
+              >
+              <textarea
+                class="form-control"
+                id="jc-add-info"
+                name="jc-add-info"
+                rows="3"
+              ></textarea>
 
               <label for="jc-comp-link" class="job-field">Company link </label>
               <input
@@ -158,16 +167,115 @@
                 name="jc-skills"
                 rows="3"
               ></textarea>
-              <label for="exampleFormControlTextarea1" class="job-field"
-                >Job Description</label
-              >
+              <label for="jc-job-desc" class="job-field">Job Description</label>
               <textarea
                 class="form-control"
                 id="jc-job-desc"
                 name="jc-job-desc"
                 rows="3"
               ></textarea>
-              <label for="jc-deadline">Deadline for regsitration:</label>
+              <hr />
+              <legend style="margin-top: 10px">Eligibilty Criteria</legend>
+              <label for="" class="job-head">Backlogs</label>
+              <input
+                type="radio"
+                id="arr-yes"
+                name="jc-backlog"
+                value="allowed"
+              />
+              <label for="arr-yes" class="">Allowed</label>
+              <input
+                type="radio"
+                id="arr-no"
+                name="jc-backlog"
+                value="denied"
+              />
+              <label for="arr-no" class="">Denied</label><br />
+
+              <label for="" class="job-head">Academic Eligibilty</label><br />
+              <label for="ec-10">Class 10</label>
+              <input
+                type="number"
+                id="ec-10"
+                name="ec-10"
+                min="0"
+                max="100"
+              /><br />
+              <label for="ec-12">Class 12</label>
+              <input
+                type="number"
+                id="ec-12"
+                name="ec-12"
+                min="0"
+                max="100"
+              /><br />
+              <label for="ec-ug">UG CGPA</label>
+              <input
+                type="number"
+                id="ec-ug"
+                name="ec-ug"
+                min="0"
+                max="100"
+              /><br />
+              <label for="" class="job-head">Eligible Departments</label><br />
+              <input
+                type="checkbox"
+                id="dept-aero"
+                name="ec-dept"
+                value="Aero"
+              />
+              <label for="dept-aero"> Aero</label>
+              <input
+                type="checkbox"
+                id="dept-btech"
+                name="ec-dept"
+                value="Bio Tech"
+              />
+              <label for="dept-btech"> Bio Tech</label>
+              <input type="checkbox" id="dept-cse" name="ec-dept" value="CSE" />
+              <label for="dept-btech"> CSE</label>
+              <input
+                type="checkbox"
+                id="dept-mech"
+                name="ec-dept"
+                value="Mech"
+              />
+              <label for="dept-mech"> Mech</label>
+              <input type="checkbox" id="dept-it" name="ec-dept" value="IT" />
+              <label for="dept-it"> IT</label>
+              <input
+                type="checkbox"
+                id="dept-chem"
+                name="ec-dept"
+                value="Chem"
+              />
+              <label for="dept-chem"> Chem</label><br />
+              <label for="" class="job-head">Package</label><br />
+              <input
+                type="checkbox"
+                id="dream-pack"
+                name="package"
+                value="Dream"
+              />
+              <label for="dream-pack"> Dream</label>
+              <input
+                type="checkbox"
+                id="general-pack"
+                name="package"
+                value="General"
+              />
+              <label for="general-pack"> General</label>
+              <input
+                type="checkbox"
+                id="super-pack"
+                name="package"
+                value="Super Dream"
+              />
+              <label for="super-pack"> Super Dream</label><br />
+
+              <label for="jc-deadline" class="job-head"
+                >Deadline for regsitration:</label
+              >
               <input
                 type="date"
                 id="jc-deadline"
@@ -175,8 +283,7 @@
                 name="jc-deadline"
               />
               <br />
-              <label for="jc-documents" class="job-field"
-                >Attach Documents</label
+              <label for="jc-documents" class="job-head">Attach Documents</label
               ><br />
               <input
                 type="file"
@@ -196,3 +303,9 @@
     ></script>
   </body>
 </html>
+
+<!--177 - 273 added fields
+
+118 -126 added a field additinal info
+170 281 label added
+83 legend added-->
