login page connected with home
login page connected with student button

--- a/Home/home.html
+++ b/Home/home.html
@@ -78,7 +78,7 @@
     </nav>
     <dialog class="my-modal">
         <h3>Who are you?</h3>
-        <button class="dialog-button">Student</button>
+        <button class="dialog-button" onclick="window.location.href='login.html';">Student</button>
         <button class="dialog-button">TPO</button>
         <button class="dialog-button">Hiring Team</button>
         <br>
