2 minute changes in oldstyle.css
but changes wont reflect in browser

--- a/Student/forms.html
+++ b/Student/forms.html
@@ -463,3 +463,15 @@
   </body>
   
 </html>
+
+
+
+<!--comment section for forms.html and its respective css
+1. margin : auto centers the div
+
+2. for the progress bar
+  2.1. set progress bar max-width to 330px to not get unnessarily strech
+  2.2. to center just do margin: auto
+
+
+-->
