Forms style update
1.updated oldstyle.css to make forms look good.
2. changed title for page 1

--- a/Student/forms.html
+++ b/Student/forms.html
@@ -115,7 +115,7 @@
         <div class="my-form-outer">
           <form action="#">
             <div class="my-page my-slidepage">
-              <div class="my-title">Basic Info:</div>
+              <div class="my-title">Basic Information</div>
               <div class="my-field">
                 <div class="my-label">Full Name</div>
                 <input type="text" id="name-el"/>
@@ -473,5 +473,7 @@
   2.1. set progress bar max-width to 330px to not get unnessarily strech
   2.2. to center just do margin: auto
 
+3. can center field elements label and input but setting margin left and right to auto
 
+4.need to change fonts and names of titles for each page
 -->
