added a new div in jobcreation and updated styles

--- a/Hiring_Team/jobcreation.html
+++ b/Hiring_Team/jobcreation.html
@@ -69,229 +69,240 @@
     </nav>
     <section id="job-form">
       <div class="container-lg" style="margin-top: 74px">
-        <div class="text-center">
-          <h2>Create Campus Drive</h2>
-          <p class="lead">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
-            ullam?
-          </p>
-        </div>
-        <div class="row justify-content-center my-5">
-          <div class="col-lg-6">
-            <form action="">
-              <input type="submit" class="submit-button" /><br />
-              <legend>Basic Drive details</legend>
-              <label for="jc-comp-name">Company Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="jc-comp-name"
-                placeholder="Enter Company Name"
-                name="jc-comp-name"
-              />
+        <div class="small-div" style="background-color: #fff">
+          <div class="text-center">
+            <h2>Create Campus Drive</h2>
+            <p class="lead">
+              Page designed specially for <b>Hiring Teams</b> to create
+              tentative campus drives.
+            </p>
+          </div>
+          <div class="row justify-content-center my-5">
+            <div class="col-lg-6">
+              <form action="">
+                <input type="submit" class="submit-button" /><br />
+                <legend>Basic Drive Details</legend>
+                <label for="jc-comp-name">Company Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="jc-comp-name"
+                  placeholder="Enter Company Name"
+                  name="jc-comp-name"
+                />
 
-              <label for="jc-job-title" class="job-field">Job Title</label>
-              <input
-                type="text"
-                class="form-control"
-                id="jc-job-title"
-                placeholder="Enter Job Title"
-                name="jc-job-title"
-              />
+                <label for="jc-job-title" class="job-field">Job Title</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="jc-job-title"
+                  placeholder="Enter Job Title"
+                  name="jc-job-title"
+                />
 
-              <label for="jc-min-ctc" class="job-field">CTC Min Range</label>
-              <input
-                type="text"
-                class="form-control"
-                id="jc-min-ctc"
-                placeholder="Enter min range"
-                name="jc-min-ctc"
-              />
-              <label for="jc-max-ctc" class="job-field">CTC Max Range</label>
-              <input
-                type="text"
-                class="form-control"
-                id="jc-max-ctc"
-                placeholder="Enter max range"
-                name="jc-max-ctc"
-              />
-              <label for="jc-add-info" class="job-field"
-                >Additional Information</label
-              >
-              <textarea
-                class="form-control"
-                id="jc-add-info"
-                name="jc-add-info"
-                rows="3"
-              ></textarea>
+                <label for="jc-min-ctc" class="job-field">CTC Min Range</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="jc-min-ctc"
+                  placeholder="Enter min range"
+                  name="jc-min-ctc"
+                />
+                <label for="jc-max-ctc" class="job-field">CTC Max Range</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="jc-max-ctc"
+                  placeholder="Enter max range"
+                  name="jc-max-ctc"
+                />
+                <label for="jc-add-info" class="job-field"
+                  >Additional Information</label
+                >
+                <textarea
+                  class="form-control"
+                  id="jc-add-info"
+                  name="jc-add-info"
+                  rows="3"
+                ></textarea>
 
-              <label for="jc-comp-link" class="job-field">Company link </label>
-              <input
-                type="email"
-                class="form-control"
-                id="jc-comp-link"
-                placeholder="Enter Company link"
-                name="jc-comp-link"
-              />
+                <label for="jc-comp-link" class="job-field"
+                  >Company link
+                </label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="jc-comp-link"
+                  placeholder="Enter Company link"
+                  name="jc-comp-link"
+                />
 
-              <div class="row job-field">
-                <div class="col">
-                  <label for="jc-drive-date-start"
-                    >Choose Potential Drive START date:</label
-                  >
-                  <input
-                    type="date"
-                    id="jc-drive-date-start"
-                    class="job-field-padding"
-                    name="jc-drive-date"
-                  />
+                <div class="row job-field">
+                  <div class="col">
+                    <label for="jc-drive-date-start"> Start Date</label>
+                    <input
+                      type="date"
+                      id="jc-drive-date-start"
+                      class="job-field-padding"
+                      name="jc-drive-date"
+                    />
+                  </div>
+                  <div class="col">
+                    <label for="jc-drive-date-end">End Date</label>
+                    <input
+                      type="date"
+                      id="jc-drive-date-end"
+                      class="job-field-padding"
+                      name="jc-drive-date-end"
+                    />
+                  </div>
                 </div>
-                <div class="col">
-                  <label for="jc-drive-date-end"
-                    >Choose Potential Drive END date:</label
-                  >
-                  <input
-                    type="date"
-                    id="jc-drive-date-end"
-                    class="job-field-padding"
-                    name="jc-drive-date-end"
-                  />
-                </div>
-              </div>
-              <label for="exampleFormControlTextarea1" class="job-field"
-                >Required Skills</label
-              >
-              <textarea
-                class="form-control"
-                id="jc-skills"
-                name="jc-skills"
-                rows="3"
-              ></textarea>
-              <label for="jc-job-desc" class="job-field">Job Description</label>
-              <textarea
-                class="form-control"
-                id="jc-job-desc"
-                name="jc-job-desc"
-                rows="3"
-              ></textarea>
-              <hr />
-              <legend style="margin-top: 10px">Eligibilty Criteria</legend>
-              <label for="" class="job-head">Backlogs</label>
-              <input
-                type="radio"
-                id="arr-yes"
-                name="jc-backlog"
-                value="allowed"
-              />
-              <label for="arr-yes" class="">Allowed</label>
-              <input
-                type="radio"
-                id="arr-no"
-                name="jc-backlog"
-                value="denied"
-              />
-              <label for="arr-no" class="">Denied</label><br />
+                <label for="exampleFormControlTextarea1" class="job-field"
+                  >Required Skills</label
+                >
+                <textarea
+                  class="form-control"
+                  id="jc-skills"
+                  name="jc-skills"
+                  rows="3"
+                ></textarea>
+                <label for="jc-job-desc" class="job-field"
+                  >Job Description</label
+                >
+                <textarea
+                  class="form-control"
+                  id="jc-job-desc"
+                  name="jc-job-desc"
+                  rows="3"
+                ></textarea>
+                <hr />
+                <legend style="margin-top: 10px">Eligibilty Criteria</legend>
+                <label for="" class="job-head">Backlogs</label>
+                <input
+                  type="radio"
+                  id="arr-yes"
+                  name="jc-backlog"
+                  value="allowed"
+                />
+                <label for="arr-yes" class="my-label">Allowed</label>
+                <input
+                  type="radio"
+                  id="arr-no"
+                  name="jc-backlog"
+                  value="denied"
+                />
+                <label for="arr-no" class="my-label">Denied</label><br />
 
-              <label for="" class="job-head">Academic Eligibilty</label><br />
-              <label for="ec-10">Class 10</label>
-              <input
-                type="number"
-                id="ec-10"
-                name="ec-10"
-                min="0"
-                max="100"
-              /><br />
-              <label for="ec-12">Class 12</label>
-              <input
-                type="number"
-                id="ec-12"
-                name="ec-12"
-                min="0"
-                max="100"
-              /><br />
-              <label for="ec-ug">UG CGPA</label>
-              <input
-                type="number"
-                id="ec-ug"
-                name="ec-ug"
-                min="0"
-                max="100"
-              /><br />
-              <label for="" class="job-head">Eligible Departments</label><br />
-              <input
-                type="checkbox"
-                id="dept-aero"
-                name="ec-dept"
-                value="Aero"
-              />
-              <label for="dept-aero"> Aero</label>
-              <input
-                type="checkbox"
-                id="dept-btech"
-                name="ec-dept"
-                value="Bio Tech"
-              />
-              <label for="dept-btech"> Bio Tech</label>
-              <input type="checkbox" id="dept-cse" name="ec-dept" value="CSE" />
-              <label for="dept-btech"> CSE</label>
-              <input
-                type="checkbox"
-                id="dept-mech"
-                name="ec-dept"
-                value="Mech"
-              />
-              <label for="dept-mech"> Mech</label>
-              <input type="checkbox" id="dept-it" name="ec-dept" value="IT" />
-              <label for="dept-it"> IT</label>
-              <input
-                type="checkbox"
-                id="dept-chem"
-                name="ec-dept"
-                value="Chem"
-              />
-              <label for="dept-chem"> Chem</label><br />
-              <label for="" class="job-head">Package</label><br />
-              <input
-                type="checkbox"
-                id="dream-pack"
-                name="package"
-                value="Dream"
-              />
-              <label for="dream-pack"> Dream</label>
-              <input
-                type="checkbox"
-                id="general-pack"
-                name="package"
-                value="General"
-              />
-              <label for="general-pack"> General</label>
-              <input
-                type="checkbox"
-                id="super-pack"
-                name="package"
-                value="Super Dream"
-              />
-              <label for="super-pack"> Super Dream</label><br />
+                <label for="" class="job-head">Academic Eligibilty</label><br />
+                <label for="ec-10" class="my-label">Class 10</label>
+                <input
+                  type="number"
+                  id="ec-10"
+                  name="ec-10"
+                  min="0"
+                  max="100"
+                /><br />
+                <label for="ec-12" class="my-label">Class 12</label>
+                <input
+                  type="number"
+                  id="ec-12"
+                  name="ec-12"
+                  min="0"
+                  max="100"
+                /><br />
+                <label for="ec-ug" class="my-label">UG CGPA</label>
+                <input
+                  type="number"
+                  id="ec-ug"
+                  name="ec-ug"
+                  min="0"
+                  max="100"
+                /><br />
+                <label for="" class="job-head space-above"
+                  >Eligible Departments</label
+                ><br />
+                <input
+                  type="checkbox"
+                  id="dept-aero"
+                  name="ec-dept"
+                  value="Aero"
+                />
+                <label for="dept-aero" class="my-label"> Aero</label>
+                <input
+                  type="checkbox"
+                  id="dept-btech"
+                  name="ec-dept"
+                  value="Bio Tech"
+                />
+                <label for="dept-btech" class="my-label"> Bio Tech</label>
+                <input
+                  type="checkbox"
+                  id="dept-cse"
+                  name="ec-dept"
+                  value="CSE"
+                />
+                <label for="dept-btech" class="my-label"> CSE</label>
+                <input
+                  type="checkbox"
+                  id="dept-mech"
+                  name="ec-dept"
+                  value="Mech"
+                />
+                <label for="dept-mech" class="my-label"> Mech</label>
+                <input type="checkbox" id="dept-it" name="ec-dept" value="IT" />
+                <label for="dept-it" class="my-label"> IT</label>
+                <input
+                  type="checkbox"
+                  id="dept-chem"
+                  name="ec-dept"
+                  value="Chem"
+                />
+                <label for="dept-chem" class="my-label"> Chem</label><br />
+                <label for="" class="job-head">Package</label><br />
+                <input
+                  type="checkbox"
+                  id="dream-pack"
+                  name="package"
+                  value="Dream"
+                />
+                <label for="dream-pack" class="my-label"> Dream</label>
+                <input
+                  type="checkbox"
+                  id="general-pack"
+                  name="package"
+                  value="General"
+                />
+                <label for="general-pack" class="my-label"> General</label>
+                <input
+                  type="checkbox"
+                  id="super-pack"
+                  name="package"
+                  value="Super Dream"
+                />
+                <label for="super-pack" class="my-label"> Super Dream</label
+                ><br />
 
-              <label for="jc-deadline" class="job-head"
-                >Deadline for regsitration:</label
-              >
-              <input
-                type="date"
-                id="jc-deadline"
-                class="job-field-padding"
-                name="jc-deadline"
-              />
-              <br />
-              <label for="jc-documents" class="job-head">Attach Documents</label
-              ><br />
-              <input
-                type="file"
-                name="jc-documents"
-                multiple="multiple"
-                id="jc-documents"
-              />
-            </form>
+                <label for="jc-deadline" class="job-head space-above"
+                  >Deadline for regsitration</label
+                >
+                <input
+                  type="date"
+                  id="jc-deadline"
+                  class="job-field-padding"
+                  name="jc-deadline"
+                />
+                <br />
+                <label for="jc-documents" class="job-head space-above"
+                  >Attach Documents</label
+                ><br />
+                <input
+                  type="file"
+                  name="jc-documents"
+                  multiple="multiple"
+                  id="jc-documents"
+                />
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -309,3 +320,7 @@
 118 -126 added a field additinal info
 170 281 label added
 83 legend added-->
+
+<!--created another div inside container lg named small-div
+small div styling done in style.css
+-->
