--- a/Student/student.html
+++ b/Student/student.html
@@ -11,7 +11,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link href="style.css" rel="stylesheet" />
+    <link href="/resources/style.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
