made a few useless changes

--- a/Home/home.html
+++ b/Home/home.html
@@ -15,6 +15,17 @@
     <link rel="stylesheet" type="text/css" href="/resources/oldstyle.css" />
     <link href="/resources/style.css" rel="stylesheet" />
     <link href="/resources/homestyle.css" rel="stylesheet" />
+    <style>
+      .pl-20{
+        padding-left: 20px;
+      }
+      .px-10{
+        padding-right: 10px;
+      }
+      .pt-80{
+        padding-top: 80px;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
@@ -92,7 +103,7 @@
         <button onclick="hidePopup()">Close</button>
       </div>
     <!--added content ended-->
-    <section id="top" style="margin-top: 74px">
+    <section id="top" style="margin-top: 100px">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-7 col-sm-7">
@@ -150,19 +161,19 @@
                 <div class="px-10 pl-20">
                   <img
                     loading="lazy"
-                    src="img/hero-person-1.png"
+                    src="/resources/bg-1.jpg"
                     class="img-responsive animate__animated animate__slideInDown"
                   />
                   <img
                     loading="lazy"
-                    src="img/hero-person-3.svg"
+                    src="/resources/bg-2.jpeg"
                     class="img-responsive animate__animated animate__slideInUp"
                   />
                 </div>
                 <div class="pt-80">
                   <img
                     loading="lazy"
-                    src="img/hero-person-2.svg"
+                    src="/resources/bg-3.jpg"
                     class="img-responsive animate__animated animate__slideInRight"
                   />
                 </div>
