TPO dash upload

--- a/Student/resume.html
+++ b/Student/resume.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="right">
-        <div class="right-mini">
+        <div class="right-rows">
           <div class="right-name">Venkatesan RS</div>
           <div class="right-role">Student</div>
           <hr />
@@ -76,49 +76,28 @@
             eius officiis est labore totam optio?
           </div>
         </div>
-        <div class="right-mini">
+        <div class="right-rows">
           <h2>Educational Background</h2>
           <hr />
+          <div class="proj-mini"></div>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
           distinctio ipsum numquam earum quo fuga totam provident magni
           architecto excepturi, rem cumque dolore, est cum!
-          <br /><br />
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non nostrum
-          aliquam rem consequatur dolorum natus et molestias repellendus
-          distinctio ratione? Ducimus placeat pariatur illo. Explicabo aliquam
-          placeat sed harum dignissimos.
-          <br /><br />
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-          distinctio ipsam ab eos eligendi, amet iure quia est nemo.
-          Repudiandae.
         </div>
-        <div class="right-mini">
+        <div class="right-rows right-mini">
           <h2>Personal Projects</h2>
+          <button class="add-mini-btn">Add Project</button>
+          <button class="delete-mini-btn">Delete Latest Project</button>
           <hr />
-          <div class="proj-title">TPA-Frontend</div>
-          <div class="proj-desc">
-            Front end work for final year project done using HTML CSS Bootstrap.
-            This work will be integreated with a django project to provide a
-            working system.
-          </div>
-          <div class="proj-title">VSMS</div>
-          <div class="proj-desc">
-            Front end work for final year project done using HTML CSS Bootstrap.
-            This work will be integreated with a django project to provide a
-            working system.
-          </div>
-          <div class="proj-title">Online Grocery System</div>
-          <div class="proj-desc">
-            Front end work for final year project done using HTML CSS Bootstrap.
-            This work will be integreated with a django project to provide a
-            working system.
-          </div>
-          <br /><br />
+          <!--new code for adding new sections-->
+          <div class="proj-mini"></div>
+          <!--code end for addding new sections-->
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
           placeat.
         </div>
       </div>
     </div>
+    <script src="resume.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
